--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,14 @@
 <resources>
     <string name="app_name">GSP_RecursoHumano</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings" translatable="false">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label" translatable="false">First Fragment</string>
+    <string name="second_fragment_label" translatable="false">Second Fragment</string>
+    <string name="next" translatable="false">Next</string>
+    <string name="previous" translatable="false">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
+    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
     <string name="titulo_crear">CREAR EMPLEADOS</string>
     <string name="cedula">Cédula</string>
     <string name="nombres">Nombres</string>
@@ -37,6 +37,11 @@
     <string name="mensaje_positivo">Si</string>
     <string name="mensaje_negativo">No</string>
     <string name="eliminar">Eliminar</string>
+    <string name="mensaje_error_cedula">Digite la cédula</string>
+    <string name="mensaje_error_nombre">Digite el nombre</string>
+    <string name="mensaje_error_apellido">Digite el apellido</string>
+    <string name="mensaje_error_celular">Digite el numero de celular</string>
+    <string name="mensaje_error_correo">Digite el correo electronico</string>
 
     <string-array name="ArraVinculacion">
         <item>@string/ops</item>
